--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
-</ion-app>
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title>
+      Ionic Torch/Flashlight Application {{isTorch}}
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-content [fullscreen]="true">
+    <ion-button expand="block" color="success" (click)="onFlashlight()">
+      Turn on
+    </ion-button>
+    <ion-button expand="block" color="danger" (click)="offFlashlight()">
+      Turn off
+    </ion-button>
+</ion-content>
